# Back-End

./: README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
sistema/: admin.py  permissions.py
sistema/migrations/: 0001_initial.py  0002_porte_raca.py  0003_voluntario_organizacao_voluntario.py  0004_usuario.py  0005_usuario_data_nascimento.py  0006_pet.py  0007_perdidos.py  0008_perdidos_castrado_perdidos_sexo_perdidos_vacinado_and_more.py  0009_alter_organizacao_options.py  0009_alter_organizacao_options_perdidos_foto_pet_foto.py  0010_remove_organizacao_voluntario_and_more.py  0011_merge_20250814_1257.py  0012_alter_perdidos_porte_alter_pet_porte_delete_porte.py  0013_perdidos_nome_pet_nome_alter_perdidos_tipo_and_more.py  0013_remove_perdidos_org_organizacao_users_perdidos_user_and_more.py  0014_organizacao_admin_organizacao_faceboook_and_more.py  0014_remove_perdidos_org_remove_pet_org_and_more.py  0015_rename_sexo_perdidos_genero_rename_sexo_pet_genero_and_more.py  0016_remove_pet_local.py  0017_organizacao_foto_perfil.py  0018_perdidos_peso.py  0019_pet_peso.py  0020_alter_perdidos_castrado_alter_perdidos_genero_and_more.py  0021_perdidos_pelagem_pet_pelagem_alter_perdidos_castrado_and_more.py  0022_rename_tipo_perdidos_especie_rename_tipo_pet_especie_and_more.py  0023_perdidos_castrado_perdidos_pelagem_perdidos_peso_and_more.py  0024_remove_perdidos_castrado_remove_perdidos_pelagem_and_more.py  0025_alter_perdidos_foto_alter_pet_foto.py  0026_alter_perdidos_foto_alter_pet_foto.py  0027_alter_organizacao_foto_perfil.py  0028_remove_organizacao_foto_perfil_organizacao_foto_and_more.py
sistema/models/: __init__.py  membro.py  organizacao.py  pet.py  porte.py  raca.py  usuario.py  voluntario.py
sistema/serializers/: __init__.py  membro.py  organizacao.py  pet.py  porte.py  raca.py  usuario.py  voluntario.py
sistema/views/: __init__.py  (+7 more)
staticfiles/: staticfiles.json
uploader/: views.py
users/: admin.py  models.py  urls.py
(+22 files in other folders)
